--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+title: Katarzyna M Piekarz
+description: Katarzyna M Piekarz's website
+---
 
 <!DOCTYPE html>
 <html lang="en" dir="ltr"><head>
