--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Katarzyna M Piekarz's website
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Grayson White</title>
+<title>Katarzyna M Piekarz</title>
 
 
 <meta property="twitter:site" content="@graysonwwhite">
