--- a/index.html
+++ b/index.html
@@ -1,46 +1,2 @@
----
-title: Katarzyna M Piekarz
-description: Katarzyna M Piekarz's website
----
-
-<!DOCTYPE html>
-<html lang="en" dir="ltr"><head>
-
-
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<title>Katarzyna M Piekarz</title>
-
-
-<meta property="twitter:site" content="@graysonwwhite">
-<meta property="twitter:creator" content="@graysonwwhite">
-   
-  
-<meta name="description" content="I&#39;m Grayson, a doctoral student in the [Finley Lab](https://finley-lab.com/) at Michigan State University. My research interests are in small area estimation, hierarchical Bayesian modeling, applications of statistics to forestry, and statistical software development.">
-
-
-<meta property="og:site_name" content="Grayson White">
-<meta property="og:title" content="Grayson White">
-<meta property="og:description" content="I&#39;m Grayson, a doctoral student in the [Finley Lab](https://finley-lab.com/) at Michigan State University. My research interests are in small area estimation, hierarchical Bayesian modeling, applications of statistics to forestry, and statistical software development." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://graysonwhite.com/" />
-<meta property="og:locale" content="en">
-  
-  
-  
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.13/dist/katex.min.css" integrity="sha384-RZU/ijkSsFbcmivfdRBQDtwuwVqK7GMOw6IMvKyeWL2K5UAlyp6WonmB8m7Jd0Hn" crossorigin="anonymous">
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.13/dist/katex.min.js" integrity="sha384-pK1WpvzWVBQiP0/GjnvRxV4mOb0oxFuyRxJlk6vVw146n3egcN5C925NCP7a7BY8" crossorigin="anonymous"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.13/dist/contrib/auto-render.min.js" integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
-
-
-
-    
-  
-  
-</footer>
-
-      </div>
-    </body>
-</html>
+# Website under construction! Check back soon!
+contact: kpiekarz3@gatech.edu
