--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-Website under construction! Check back soon!
-contact: kpiekarz3@gatech.edu
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+
+    <title>Katarzyna M Piekarz</title>
+    <link rel="icon" type="image/x-icon" href="nmj_cropped.jpg">
+</head>
+<body style="background:url('nmj_padded.jpg') no-repeat; background-size: cover">
+
+<p style="color:white">Website under construction! Check back soon! contact: kpiekarz3@gatech.edu</p>
+</body>
+</html>
