--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <title>Katarzyna M Piekarz</title>
     <link rel="icon" type="image/x-icon" href="nmj_cropped.jpg">
+    <style>
+        body {
+            background-image: url('nmj_padded.jpg');
+            background-color: black;
+            background-repeat: no-repeat;
+            background-size: cover
+            }
+    </style>
 </head>
-<body style="background:url('nmj_padded.jpg') no-repeat; background-size: cover">
+<body>
 
 <p style="color:white">Website under construction! Check back soon! contact: kpiekarz3@gatech.edu</p>
 </body>
