--- a/about.html
+++ b/about.html
@@ -23,15 +23,15 @@
     <div class="side-container">
         <a class="side-link" href="index.html">HOME</a><br>
         <br>
-        <a class="side-link" href="">ABOUT</a><br>
+        <a class="side-link" href="about.html">ABOUT</a><br>
         <br>
         <a class="side-link" href="CV_Katarzyna_Piekarz_test.pdf" download="Katarzyna_Piekarz_CV_april2022.pdf">CV</a><br>
         <br>
         <a class="side-link" href="https://scholar.google.com/citations?user=bI1rCUQAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">PUBLICATIONS</a><br>
         <br>
-        <a class="side-link" href="">SOFTWARE</a><br>
+        <a class="side-link" href="software.html">SOFTWARE</a><br>
         <br>
-        <a class="side-link" href="">CONTACT</a><br>
+        <a class="side-link" href="contact.html">CONTACT</a><br>
     </div>
 
     <main>
