--- a/software.html
+++ b/software.html
@@ -35,7 +35,12 @@
     </div>
 
     <main>
-        <p class="construction">UNDER CONSTRUCTION...</p>
+        <img class="converter" src="converter.png">
+        <p class="software-title">CIONA GENE MODEL CONVERTER</p>
+        <p class="software-description">The converter allows you to easily convert <span class="ciona">Ciona</span>
+            gene identifiers between KH and KY gene models. There are two versions: with and without GUI. The program
+            is deposited on <a class="git" href="https://github.com/katarzynampiekarz/ciona_gene_model_converter"
+            target="_blank" rel="noopener noreferrer">Github.</a></p>
     </main>
 
     <div class="footer">
