--- a/about.html
+++ b/about.html
@@ -35,7 +35,17 @@
     </div>
 
     <main>
-        <p class="construction">UNDER CONSTRUCTION...</p>
+        <img class="ka" src="KPlab.png">
+        <p class="about">I am a Postdoctoral Fellow in Alberto Stolfi’s lab at Georgia Institute of Technology.
+            We use <span class="ciona">Ciona intestinalis</span>, a simple invertebrate, to ask questions about the development of the nervous system.
+            Ciona has a compact genome and a simple nervous system, and it’s also easily genetically tractable through
+            CRISPR, which makes it a great system for such inquiries.<br>
+            <br>
+            I’m interested in how the nervous system came to be, both from developmental and evolutionary perspectives,
+            as well as in regeneration and age-related neurodegeneration which was the topic of my doctoral dissertation
+            completed at the University of Oklahoma Health Sciences Center. I also enjoy bioinformatics and writing programs
+            that assist in everyday science-making. Finally, I’m also interested in how we can use synthetic biology,
+            deep learning and simulations to study neural development.</p>
     </main>
 
     <div class="footer">
