--- a/software.html
+++ b/software.html
@@ -2,7 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-68DRPZ7HPB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-68DRPZ7HPB');
+    </script>
     <title>Katarzyna M Piekarz</title>
     <link rel="icon" type="image/x-icon" href="nmj_cropped.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
