--- a/software.html
+++ b/software.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Katarzyna M Piekarz</title>
     <link rel="icon" type="image/x-icon" href="nmj_cropped.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" media='screen and (min-width: 601px)' href="css/styles.css">
+    <link rel="stylesheet" media='screen and (max-width: 600px)' href="css/narrow.css">
 
 </head>
     <!-- Google tag (gtag.js) -->
@@ -26,6 +27,7 @@
     PIEKARZ</h1>
     <h2>Postdoctoral<br>
         Fellow</h2>
+    <img class="nmj" src="nmj.jpg">
     <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">STOLFI LAB </a>
         | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">GEORGIA INSTITUTE OF TECHNOLOGY</a></h3>
 
