--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media='screen and (min-width: 601px)' href="css/styles.css">
-    <link rel="stylesheet" media='screen and (max-width: 600px)' href="css/narrow.css">
+    <link rel="stylesheet" media='screen and (orientation:landscape)' href="css/styles.css">
+    <link rel="stylesheet" media='screen and (orientation:portrait)' href="css/narrow.css">
 
 </head>
     
