--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,13 @@
     <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">STOLFI LAB </a>
         | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">GEORGIA INSTITUTE OF TECHNOLOGY</a></h3>
 
-    <div class="side-container">
+    <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>
-        <a class="side-link" href="about.html">ABOUT</a><br>
+        <a class="side-link" href="about.html#side">ABOUT</a><br>
         <a class="side-link" href="CV_Katarzyna_Piekarz_updated_Nov2022.pdf" download="Katarzyna_Piekarz_CV_updated_Nov2022.pdf">CV</a><br>
         <a class="side-link" href="https://scholar.google.com/citations?user=bI1rCUQAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">PUBLICATIONS</a><br>
-        <a class="side-link" href="software.html">SOFTWARE</a><br>
-        <a class="side-link" href="contact.html">CONTACT</a><br>
+        <a class="side-link" href="software.html#side">SOFTWARE</a><br>
+        <a class="side-link" href="contact.html#side">CONTACT</a><br>
     </div>
 
     <main>
