--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="Katarzyna M Piekarz">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Katarzyna M Piekarz</title>
     <link rel="icon" type="image/x-icon" href="nmj_cropped.jpg">
