--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>   
         <a class="side-link" href="about.html#side">ABOUT</a><br>     
-        <a class="side-link" href="CV_Katarzyna_Piekarz_Jan2024.pdf" target="_blank" rel="noopener noreferrer">CV</a><br>   
+        <a class="side-link" href="CV_Katarzyna_Piekarz.pdf" target="_blank" rel="noopener noreferrer">CV</a><br>   
         <a class="side-link" href="https://scholar.google.com/citations?user=bI1rCUQAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">PUBLICATIONS</a><br>      
         <a class="side-link" href="software.html#side">SOFTWARE</a><br>
         <a class="side-link" href="contact.html#side">CONTACT</a><br>
