--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
     <h2>Postdoctoral<br>
         Fellow</h2>
     <img class="nmj" src="nmj.jpg">
-    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">STOLFI LAB </a>
-        | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">GEORGIA INSTITUTE OF TECHNOLOGY</a></h3>
+    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">BAGNALL LAB </a>
+        | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">WashU</a></h3>
 
     <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>
@@ -40,7 +40,7 @@
     </div>
 
     <main>
-        <a href="mailto:kpiekarz3@gatech.edu"><img class="social" src="email-icon2.png"></a>
+        <a href="mailto:piekarz@wustl.edu"><img class="social" src="email-icon2.png"></a>
         <a href="https://orcid.org/0000-0003-4710-9970" target="_blank" rel="noopener noreferrer"><img class="social" src="ORCID_icon.png"></a>
         <a href="https://www.linkedin.com/in/katarzyna-piekarz/" target="_blank" rel="noopener noreferrer"><img class="social" src="linkedin-icon.png"></a>
         <a href="https://universeodon.com/@labcatrina" target="_blank" rel="noopener noreferrer"><img class="social" src="mastodon.png"></a>
