--- a/software.html
+++ b/software.html
@@ -27,8 +27,8 @@
     <h2>Postdoctoral<br>
         Fellow</h2>
     <img class="nmj" src="nmj.jpg">
-    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">STOLFI LAB </a>
-        | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">GEORGIA INSTITUTE OF TECHNOLOGY</a></h3>
+    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">BAGNALL LAB </a>
+        | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">WashU</a></h3>
 
     <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>    
