--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         Fellow</h2>
     <img class="nmj" src="nmj.jpg">
     <h3 style="text-align:center">PHD IN NEUROSCIENCE | <a class="lab" href="https://sites.wustl.edu/bagnall/" target="_blank" rel="noopener noreferrer">BAGNALL LAB </a>
-        | <a class="lab" href="https://washu.edu/" target="_blank" rel="noopener noreferrer">WASHINGTON UNIVERSITY IN ST.LOUIS</a></h3>
+        | <a class="lab" href="https://washu.edu/" target="_blank" rel="noopener noreferrer">WASHU</a></h3>
 
     <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>   
