--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
     <h2>Postdoctoral<br>
         Fellow</h2>
     <img class="nmj" src="nmj.jpg">
-    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">BAGNALL LAB </a>
-        | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">WashU</a></h3>
-
+    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="https://sites.wustl.edu/bagnall/" target="_blank" rel="noopener noreferrer">BAGNALL LAB </a>
+        | <a class="lab" href="https://washu.edu/" target="_blank" rel="noopener noreferrer">WASHINGTON UNIVERSITY IN ST.LOUIS</a></h3>
+    
     <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>
         <a class="side-link" href="about.html#side">ABOUT</a><br>
