--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
     <h2>Postdoctoral<br>
         Fellow</h2>
     <img class="nmj" src="nmj.jpg">
-    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="http://www.tunicates.org/" target="_blank" rel="noopener noreferrer">STOLFI LAB </a>
-        | <a class="lab" href="https://www.gatech.edu/" target="_blank" rel="noopener noreferrer">GEORGIA INSTITUTE OF TECHNOLOGY</a></h3>
+    <h3>PHD IN NEUROSCIENCE | <a class="lab" href="https://sites.wustl.edu/bagnall/" target="_blank" rel="noopener noreferrer">BAGNALL LAB </a>
+        | <a class="lab" href="https://washu.edu/" target="_blank" rel="noopener noreferrer">WASHINGTON UNIVERSITY IN ST.LOUIS</a></h3>
 
     <div class="side-container" id="side">
         <a class="side-link" href="index.html">HOME</a><br>
@@ -43,16 +43,15 @@
 
     <main>
         <img class="ka" src="KPlab.png">
-        <p class="about">I am a Postdoctoral Fellow in Alberto Stolfi’s lab at Georgia Institute of Technology.
-            We use <span class="ciona">Ciona intestinalis</span>, a simple invertebrate, to ask questions about the development of the nervous system.
-            Ciona has a compact genome and a simple nervous system, and it’s also easily genetically tractable through
-            CRISPR, which makes it a great system for such inquiries.<br>
+        <p class="about">I am a Postdoctoral Fellow in Martha Bagnall’s lab at WashU.
+            We use zebrafish to ask questions about the development of the nervous system.<br>
             <br>
-            I’m interested in how the nervous system came to be, both from developmental and evolutionary perspectives,
-            as well as in regeneration and age-related neurodegeneration which was the topic of my doctoral dissertation
-            completed at the University of Oklahoma Health Sciences Center. I also enjoy bioinformatics and writing programs
-            that assist in everyday science-making. Finally, I’m also interested in how we can use synthetic biology,
-            deep learning and simulations to study neural development.</p>
+            I am interested in the development of the motor system, espacially the spinal cord,
+            as well as in aging and neurodegeneration. I also enjoy working with computers, writing programs
+            that assist in everyday science-making, and tinkering with electronics, such as Arduino or various BCI systems, 
+            which can help in investigating the motor system. To this end, I also employ computer simulations. Lastly, I am curious 
+            how microgravity and space environment in general influence the motor system function, development and aging.
+            </p>
     </main>
 
     <div class="footer">
